# recruitment-2024-autumn

./: .gitignore  CMakeLists.txt  job.slurm  record.md
data/: medium_q.fna  medium_ref.txt  medium_t.fna  small_q.fna  small_ref.txt  small_t.fna  test_q.fna  test_ref.txt  test_t.fna  tiny_q.fna  tiny_ref.txt  tiny_t.fna
include/: SmithWaterman.hpp  cuda.h
src/: SmithWaterman.cc  cuda.cu
